--- a/notebooks/one_image_one_label.ipynb
+++ b/notebooks/one_image_one_label.ipynb
@@ -226,7 +226,15 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 10 / 100] train loss = 0.36 acc = 0.84  test loss = 0.40 acc = 0.82\n"
+     ]
+    }
+   ],
    "source": [
     "model = CNN().to(device)\n",
     "lr = 1e-2\n",
