--- a/src/data/data_exploration.ipynb
+++ b/src/data/data_exploration.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/dlmi-lymphocytosis-classification/\""
+    "data_dir = \"../../data/dlmi-lymphocytosis-classification/\""
    ]
   },
   {
