--- a/src/one_image_one_label/one_image_one_label.ipynb
+++ b/src/one_image_one_label/one_image_one_label.ipynb
@@ -24,8 +24,7 @@
     "from sklearn import metrics, model_selection\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "sys.path.append(\"../src/\")\n",
-    "from utils import train, test, trainer\n",
+    "from ..utils import train, test, trainer\n",
     "from one_image_one_label import (\n",
     "    ImageLabelDataset, \n",
     "    ImageDataset, \n",
