--- a/src/images/image_exploration.ipynb
+++ b/src/images/image_exploration.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/dlmi-lymphocytosis-classification/\""
+    "data_dir = \"../../data/dlmi-lymphocytosis-classification/\""
    ]
   },
   {
