Attributes models: Linear models, tree, random forest

--- a/src/attributes_models/decision_tree.ipynb
+++ b/src/attributes_models/decision_tree.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../../data/dlmi-lymphocytosis-classification/\"\n",
+    "data_dir = \"../data/dlmi-lymphocytosis-classification/\"\n",
     "compute_age = lambda x: 2024 - int(x.replace(\"-\", \"/\").split(\"/\")[-1])\n",
     "gender_to_int = lambda x: 1 if x.lower() == \"m\" else 0"
    ]
