Attributes models: Linear models, tree, random forest

--- a/src/attributes_models/linear_model.ipynb
+++ b/src/attributes_models/linear_model.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# DLMI - Lymphocytosis classification\n",
-    "## Linear model optimization"
+    "## Linears models"
    ]
   },
   {
