--- a/src/attributes_models/xgboost.ipynb
+++ b/src/attributes_models/xgboost.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# DLMI - Lymphocytosis classification\n",
-    "## Linears models"
+    "## XGBoost"
    ]
   },
   {
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
+    "import xgboost as xgb\n",
     "\n",
     "from sklearn import (\n",
     "    linear_model,\n",
@@ -284,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logistic Regression"
+    "### XGBoost"
    ]
   },
   {
@@ -293,7 +294,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr_params = {\n",
+    "xgb_params = {\n",
+    "    \"booster\": [\"gbtree\", \"gblinear\", \"dart\"], \n",
+    "    \"eta\": [1e-2, 0.1, 0.2, 0.5, 0.7, 1],\n",
+    "    \"max_depth\": [6, 10, 20],\n",
+    "    \"sampling_method\": [\"uniform\", \"gradient_based\"]\n",
     "    \"C\": [1e-6, 1e-3, 1e-2, 1e-1, 1, 10, 100],\n",
     "    \"solver\": {\n",
     "        \"lbfgs\": [\"l2\", None], \n",
@@ -302,7 +307,6 @@
     "        \"sag\": [\"l2\", None], \n",
     "        \"saga\": [\"elasticnet\", \"l1\", \"l2\", None]\n",
     "    },\n",
-    "    \"l1_ratio\": [1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1],\n",
     "}"
    ]
   },
