One to one image models

--- a/src/one_to_one/RESNET50.ipynb
+++ b/src/one_to_one/RESNET50.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# DLMI - Lymphocytosis classification\n",
-    "## One-to-one image model: CNN"
+    "## One-to-one image model: ResNet50"
    ]
   },
   {
@@ -155,52 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Epoch 1 / 50]\n",
-      "\ttrain loss = 0.95583 acc = 0.78822 bacc = 0.50031\n",
-      "\ttest loss = 0.40020 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 2 / 50]\n",
-      "\ttrain loss = 0.47758 acc = 0.79748 bacc = 0.50000\n",
-      "\ttest loss = 0.40603 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 3 / 50]\n",
-      "\ttrain loss = 0.47718 acc = 0.79748 bacc = 0.50000\n",
-      "\ttest loss = 0.49451 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 4 / 50]\n",
-      "\ttrain loss = 0.46058 acc = 0.79748 bacc = 0.50000\n",
-      "\ttest loss = 0.45210 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 5 / 50]\n",
-      "\ttrain loss = 0.44143 acc = 0.79748 bacc = 0.50000\n",
-      "\ttest loss = 0.49900 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 6 / 50]\n",
-      "\ttrain loss = 0.43615 acc = 0.79748 bacc = 0.50000\n",
-      "\ttest loss = 0.37016 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 7 / 50]\n",
-      "\ttrain loss = 0.42279 acc = 0.79889 bacc = 0.54297\n",
-      "\ttest loss = 0.44898 acc = 0.83513 bacc = 0.50000\n",
-      "[Epoch 8 / 50]\n",
-      "\ttrain loss = 0.40118 acc = 0.81470 bacc = 0.61962\n",
-      "\ttest loss = 0.41159 acc = 0.79960 bacc = 0.76586\n",
-      "[Epoch 9 / 50]\n",
-      "\ttrain loss = 0.39600 acc = 0.82426 bacc = 0.66288\n",
-      "\ttest loss = 0.35448 acc = 0.84082 bacc = 0.52070\n",
-      "[Epoch 10 / 50]\n",
-      "\ttrain loss = 0.38820 acc = 0.82738 bacc = 0.67003\n",
-      "\ttest loss = 0.43584 acc = 0.83627 bacc = 0.50552\n",
-      "[Epoch 11 / 50]\n",
-      "\ttrain loss = 0.37460 acc = 0.83583 bacc = 0.69016\n",
-      "\ttest loss = 0.35124 acc = 0.84764 bacc = 0.55938\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image_encoder = Resnet18Encoder()\n",
-    "model = Classifier(d_model=).to(device)\n",
+    "image_encoder = Resnet50Encoder().to(device)\n",
+    "image_encoder.eval()\n",
+    "model = Classifier(d_model=2048).to(device)\n",
     "lr = 1e-2\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr) \n",
     "loss_fn = nn.CrossEntropyLoss()\n",
@@ -220,15 +181,15 @@
    "source": [
     "y_true_val = np.array([labels_dict[p] for p in val_images.keys()])\n",
     "y_pred_min = predict_all(\n",
-    "    model, val_images, transform_function, batch_size=batch_size, \n",
+    "    model, image_encoder, val_images, transform_function, batch_size=batch_size, \n",
     "    prediction_aggregator=PredictionAggregator.MIN, device=device\n",
     ")\n",
     "y_pred_max = predict_all(\n",
-    "    model, val_images, transform_function, batch_size=batch_size, \n",
+    "    model, image_encoder, val_images, transform_function, batch_size=batch_size, \n",
     "    prediction_aggregator=PredictionAggregator.MAX, device=device\n",
     ")\n",
     "y_pred_mean = predict_all(\n",
-    "    model, val_images, transform_function, batch_size=batch_size, \n",
+    "    model, image_encoder, val_images, transform_function, batch_size=batch_size, \n",
     "    prediction_aggregator=PredictionAggregator.MEAN, device=device\n",
     ")"
    ]
@@ -237,15 +198,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "acc = 0.71 bal. acc = 0.50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "acc = metrics.accuracy_score(y_true_val, y_pred_min)\n",
     "balanced_acc = metrics.balanced_accuracy_score(y_true_val, y_pred_min)\n",
