One to one image models

--- a/src/one_to_one/VGG16.ipynb
+++ b/src/one_to_one/VGG16.ipynb
@@ -51,6 +51,7 @@
    "outputs": [],
    "source": [
     "data_dir = \"../../data/dlmi-lymphocytosis-classification/\"\n",
+    "data_dir = \"/kaggle/input/dlmi-lymphocytosis/dlmi-lymphocytosis-classification/\"\n",
     "train_dir = data_dir + \"trainset/\"\n",
     "test_dir = data_dir + \"testset/\""
    ]
@@ -202,13 +203,13 @@
    "source": [
     "acc = metrics.accuracy_score(y_true_val, y_pred_min)\n",
     "balanced_acc = metrics.balanced_accuracy_score(y_true_val, y_pred_min)\n",
-    "print(f\"Min acc = {acc:.2f} bal. acc = {balanced_acc:.2f}\")\n",
+    "print(f\"Min acc = {acc:.5f} bal. acc = {balanced_acc:.5f}\")\n",
     "acc = metrics.accuracy_score(y_true_val, y_pred_max)\n",
     "balanced_acc = metrics.balanced_accuracy_score(y_true_val, y_pred_max)\n",
-    "print(f\"Max acc = {acc:.2f} bal. acc = {balanced_acc:.2f}\")\n",
+    "print(f\"Max acc = {acc:.5f} bal. acc = {balanced_acc:.5f}\")\n",
     "acc = metrics.accuracy_score(y_true_val, y_pred_mean)\n",
     "balanced_acc = metrics.balanced_accuracy_score(y_true_val, y_pred_mean)\n",
-    "print(f\"Mean acc = {acc:.2f} bal. acc = {balanced_acc:.2f}\")"
+    "print(f\"Mean acc = {acc:.5f} bal. acc = {balanced_acc:.5f}\")"
    ]
   },
   {
